# hero_radar_odometry

./: .gitignore  LICENSE  README.md  download_models.sh  download_results.sh  eval.py  eval_debug.py  eval_f2f.py  eval_job  eval_window.py  eval_window_no_lm.py  gen_ins_gt.py  launch_jobs  plot_buddies.py  precompute_kitti_images.py  requirements.txt  run.sh  run_batch.py  save_kitti_images.py  save_kitti_pointcloud.py  slurm_job  softmax_matcher_block_radar.py  train.py  train_f2f_steam.py  train_job  train_radar.py  train_steam.py  unit_test.py  vis_image.py  vis_kitti_seq.py  vis_odom.py  vis_pc.py  vis_yeti.py  visualize.py
config/: 2001915.json  2001968.json  2001971.json  2002203.json  boreas.json  boreas_batch_local.json  eval.json  kitti-vision-matching.json  kitti-vision-test.json  kitti-vision-train-laptop.json  kitti-vision-train.json  local_eval_config.json  radar.json  radar.yaml  radar2.json  sample.json  steam.json  steam_eval.json  steam_f2f.json  steam_f2f_eval.json  test.json  test2.json  unittest_load_camera_data.json
cpp/: BatchSolver.cpp  BatchSolver.hpp  CMakeLists.txt  DataLoader.cpp  DataLoader.hpp  LidarImuCalibPriorEval.cpp  LidarImuCalibPriorEval.hpp  P2P2ErrorEval.cpp  P2P2ErrorEval.hpp  P2P3ErrorEval.cpp  P2P3ErrorEval.hpp  SE2VelPriorEval.cpp  SE2VelPriorEval.hpp  SteamPyHelper.hpp  SteamSolver.cpp  SteamSolver.hpp  mcransac.cpp  mcransac.hpp  steampy.cpp
cpp_wrappers/cpp_steam/: CMakeLists.txt  P2P3ErrorEval.hpp  P2PLandmarkErrorEval.cpp  P2PLandmarkErrorEval.hpp  hello_np.cpp  landmark_eval_test.cpp  steampy_f2f.cpp  steampy_lm.cpp
datasets/: boreas.py  custom_sampler.py  features.py  interpolate_poses.py  kitti.py  oxford.py  radar.py  sequential_sampler.py  transforms.py
docker/: Dockerfile  DockerfileOld
models/: f2f_gt_net.py  keypoint_block.py  unet.py
networks/: .steam_pose_model.py.swp  SVDBlock.py  SVDPoseModel.py  SVDWeightBlock.py  UNetBlock.py  batch.py  dual_super_block.py  f2f_pose_model.py  hero.py  keypoint.py  keypoint_block.py  keypoint_block_radar.py  layers.py  softmax_matcher.py  softmax_matcher_block.py  softmax_ref_matcher.py  steam_pose_model.py  steam_solver.py  superpoint_block.py  svd.py  svd_block.py  svd_pose_model.py  svd_pose_radar.py  svd_weight_block.py  under_the_radar.py  unet.py  unet_block.py  unetf_block.py  yeti.py
test/: matching.py  test_augmentation.py  test_distortion.py  test_matching.py  test_steam.py  test_svd.py  test_timestamps.py
train/: dummy_trainer.py  simple_f2f_gt_trainer.py
unittests/: load_camera_data.py  matching.py
utils/: config.py  early_stopping.py  helper_func.py  lie_algebra.py  losses.py  monitor.py  monitor_base.py  plot.py  steam_monitor.py  stereo_camera_model.py  tester.py  trainer.py  trainer_radar.py  utils.py  vis.py  window_estimator.py  window_estimator_pseudo.py  window_estimator_pseudo_nolm.py
